Convert var declarations to explicit types in WebMvcSseIntegrationTests.java
Co-Authored-By: 于泽棋 <finyu@webank.com>